Misc/miscpage.css
body{
	margin-top: 0
}

#full {
	width: 100%;
	max-height: 100%;
	background-color: white;
	
}

#Section0 {
	background-color: white;
	
}

#writername {
  display: flex;
	float: right;
	right: 20px;
	top: 20px;
	margin-right: 20px;
	color: #e6c222;
	font-family: "Didot";
  align-items: center;
}

#Section1 {
	background-color: white;
	font-size: 20px;
}


#header-image{
	width: 100%;
	height: 100%;
	background-image: url("miscpageheader.png");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 50% 50%;
	margin-top: 60px;
}

.dropbtn {
    background-color: gold;
    color: white;
    padding: 16px;
    font-size: 16px;
    margin-top: 20px;
    Margin-left: 20px; 
    border: none;
    cursor: pointer;
    font-family: 'Merriweather';
    float: left;
}

.dropbtn:hover, .dropbtn:focus {
    background-color: #36a4c5;
    Color: black;
}

#Section2 {
	background-color: white;
	margin: 60px;
	font-size: 20px;
}

#Section2.p {
	font-size: 20px;
}

#Section3 {
	background-color: #edebe6;
	margin: 60px;
	padding: 30px;
	float: left;	
}

#Section4 {
	background-color: white;
	font-size: 14px;
}

#Section4 img{

	float: right;	
}

#Section5 {
	background-color: white;
	text-align: left;
	padding: 10px;
	margin-left: 30px;
	margin-right: 30px;
	font-size: 14px;
}

p {
  font-size: 20px;
  text-indent: 50px;
}

#copyright {
	background-color: white;
	flex: 1;
	text-align: center;
	font-size: 14px;
}

.p0 { text-indent: 2em; }
.p1 { text-indent: 4em; }
.p2 { text-indent: 15px;}
.p3 { text-indent: 160px;}
.p4 { text-indent: 1em; }
.p5 {text-indent: 300px;}


table, th, td {
  border:2px solid rgb(153, 154, 167);
  font-size: 20px;
}

table {
  border-collapse: collapse;
  border: 1px solid;
}

th {
  text-align: center;
  background-color: #36a4c5;
  vertical-align: middle;
  height: 70px;
  font-size: 22px;
}


tr:hover {
  background-color: #efe8ea;
}


td {
  text-align: left;
  padding: 15px;
}

img {
  width: 70px; 
  height: 70px;
}

.left-title-cell{
  border-right: none;
  text-align: left;
  padding-left: 42px;
  
}

.right-title-cell{
  border-left: none;
}


@media only screen and (min-width: 700px) {
  #writername br{
   display: none;
  }
}

@media only screen and (min-width: 390px) and (max-width: 490px) {
  #writername h1{
   font-size: 50px
  }
}

/* For screens smaller than 390px, use a font size of 16px */
@media only screen and (max-width: 390px) {
  #writername h1{
    font-size: 16px;
  }
}

/* For screens smaller than 590px wide, change main body of text to have smaller font size */
@media only screen and (max-width: 590px) {
  #Section1 p{
    font-size: 15px;
  }
}

@media only screen and (max-width: 915px) {
  #Section3  {
	.img {
		width: 50%;
	}
  }
}

@media only screen and (max-width: 600px) {
  #header-image {
    height: 120px; /* smaller height for mobile */
  }
}

